crates/language-v2/tests/src/fail/p0_parsing/duplicate_set_entry/test.rs
#![allow(unused_crate_dependencies)]

language_v2_macros::compile!(Language(
    name = Foo,
    binding_rules_file = "bindings/rules.msgb",
    root_item = Bar,
    leading_trivia = Sequence([]),
    trailing_trivia = Sequence([]),
    versions = ["1.0.0", "1.0.0", "3.0.0"],
    sections = [Section(
        title = "Section One",
        topics = [Topic(
            title = "Topic One",
            lexical_context = Foo,
            items = [Token(
                name = Bar,
                definitions = [TokenDefinition(Atom("bar"))]
            )]
        )]
    )],
    built_ins = []
));

fn main() {}
